--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,17 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "modular-multisafepay/modular-middleware-multisafepay",
+    "description": "This is my package modular-middleware-multisafepay",
     "keywords": [
-        ":vendor_name",
+        "Modular-Multisafepay",
         "laravel",
-        ":package_slug"
+        "modular-middleware-multisafepay"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/modular-multisafepay/modular-middleware-multisafepay",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "MultiSafepay",
+            "email": "",
             "role": "Developer"
         }
     ],
@@ -23,25 +23,20 @@
     "require-dev": {
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
-        "nunomaduro/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Modular-Multisafepay\\ModularMiddlewareMultisafepay\\": "src",
+            "Modular-Multisafepay\\ModularMiddlewareMultisafepay\\Database\\Factories\\": "database/factories"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Modular-Multisafepay\\ModularMiddlewareMultisafepay\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -56,10 +51,10 @@
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Modular-Multisafepay\\ModularMiddlewareMultisafepay\\ModularMiddlewareMultisafepayServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "ModularMiddlewareMultisafepay": "Modular-Multisafepay\\ModularMiddlewareMultisafepay\\Facades\\ModularMiddlewareMultisafepay"
             }
         }
     },
