--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     "authors": [
         {
             "name": "MultiSafepay",
-            "email": "",
-            "role": "Developer"
+            "email": "info@multisafepay.com",
+            "role": "Support"
         }
     ],
     "require": {
